--- a/app/templates/_macros.html
+++ b/app/templates/_macros.html
@@ -1,6 +1,6 @@
 {% macro pagination_widget(pagination, endpoint, fragment='') %}
-<ul class="pagination">
-    <li{% if not pagination.has_prev %} class="disabled"{% endif %}>
+<ul class="pagination pagination-minimal" style="background-color:#B1BAB4" align="center">
+    <li {% if not pagination.has_prev %} class="disabled previous" {% else %} class="previous" {% endif %} >
         <a href="{% if pagination.has_prev %}{{ url_for(endpoint,
             page = pagination.page - 1, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
             &laquo;
@@ -21,7 +21,7 @@
         <li class="disabled"><a href="#">&hellip;</a></li>
         {% endif %}
     {% endfor %}
-    <li{% if not pagination.has_next %} class="disabled"{% endif %}>
+    <li{% if not pagination.has_next %} class="disabled next" {% else %} class="next" {% endif %}>
         <a href="{% if pagination.has_next %}{{ url_for(endpoint,
             page = pagination.page + 1, **kwargs) }}{{ fragment }}{% else %}#{% endif %}">
             &raquo;
