--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -3,7 +3,11 @@
 {% block title %}Flasky - Page Not Found{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Not Found</h1>
+<div class="container">
+    <div class="row" style="padding-bottom:50px;">
+        <div class="page-header">
+            <h1>Not Found</h1>
+        </div>
+    </div>
 </div>
 {% endblock %}
