--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -3,7 +3,11 @@
 {% block title %}Flasky - Internal Server Error{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Internal Server Error</h1>
+<div class="container">
+    <div class="row" style="padding-bottom:50px;">
+        <div class="page-header">
+            <h1>Internal Server Error</h1>
+        </div>
+    </div>
 </div>
 {% endblock %}
