--- a/app/templates/_posts.html
+++ b/app/templates/_posts.html
@@ -1,44 +1,47 @@
-<ul class="posts">
-    {% for post in posts %}
-    <li class="post">
-        <div class="post-thumbnail">
-            <a href="{{ url_for('.user', username=post.author.username) }}">
-                <img class="img-rounded profile-thumbnail"
-                    src="{{ post.author.gravatar(size=40) }}">
+{% for post in posts %}
+    <article class="article the-font" style="box-shadow: rgb(167, 163, 163) 5px 5px 20px;background:#fffffc;">
+        <a href="/post/{{ post.id }}"><h3 style="color:#34495E">{{ post.title }}</h3></a>
+        <p style="padding-left:20px;">
+            <i class="fa fa-user-circle-o" aria-hidden="true"></i>
+            <a href="{{ url_for('.user', username=post.author.username) }}"> {{ post.author.username }}</a> &nbsp
+            <small>
+                <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
+                <span style="color:#8C8C8C;"> {{ moment(post.timestamp).format('YYYY/MM/DD') }}</span>
+            </small>
+            <a href="#" style="float:right">
+                <span class="label label-success"><i class="fa fa-paperclip" aria-hidden="true"></i> {{ post.category.name }}</span>
             </a>
+        </p>
+        <div class="post-alert">版权声明：本文版权归作者所有，转载请注明地址。</div>
+        
+        <div class="post-body">
+        {% if post.summury_html %}
+        {{ post.summury_html | safe }}
+        {% else %}
+        {{ post.summury }}
+        {% endif %}
         </div>
-        <div class="post-content">
-            <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
-            <div class="post-author"><a href="{{ url_for('.user', username=
-                post.author.username) }}">{{ post.author.username }}</a></div>
-            <div class="post-body">
-                {% if post.body_html %}
-                    {{ post.body_html | safe }}
-                {% else %}
-                    {{ post.body }}
-                {% endif %}
-            </div>
-            <div class="post-footer">
-                <a href="{{ url_for('.post', id=post.id) }}">
-                    <span class="label label-default">Permalink</span>
-                </a>
-                {% if post.comments.count()>0 %}
+        <div style="border-top:1px solid #EBEBEB;padding:20px 5px;margin-bottom:20px;">
+            <span style="float:right;">
                 <a href="{{ url_for('.post', id=post.id) }}#comments">
-                    <span class="label label-primary">
-                        {{ post.comments.count() }} Comments</span>
+                    <button class="btn  btn-info">
+                        <i class="fa fa-commenting" aria-hidden="true"></i> {{ post.comments.count() }} 评论
+                    </button>
                 </a>
-                {% endif %}
                 {% if current_user == post.author %}
                 <a href="{{ url_for('.edit', id=post.id) }}">
-                    <span class="label label-primary">Edit</span>
+                    <button class="btn  btn-primary"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> 编辑</button>
                 </a>
                 {% elif current_user.is_administrator() %}
-                <a href="{{ url_for('.edit', id=post.id) }}">
-                    <span class="label label-danger">Edit [Admin]</span>
-                </a>
+                <a href="{{ url_for('.edit', id=post.id) }}"><span class="label label-danger">编辑 [管理员]</span></a>
                 {% endif %}
-            </div>
+                <a href="{{ url_for('.post', id=post.id) }}">
+                    <button class="btn  btn-inverse"><i class="fa fa-chevron-circle-down" aria-hidden="true"></i> 详情</button>
+                </a>
+
+            </span>
         </div>
-    </li>
+    </article>
     {% endfor %}
-</ul>
+
+
