--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Change Email Address{% endblock %}
+{% block title %}更改邮箱地址{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Change Your Email Address</h1>
-</div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
+<div class="container">
+    <div class="row" style="padding-bottom:50px;">
+        <div class="page-header"><h3>更改邮箱地址</h3></div>
+        <div class="col-md-4">{{ wtf.quick_form(form) }}</div>
+    </div>
 </div>
 {% endblock %}
