--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,17 +1,18 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Login{% endblock %}
+{% block title %}登录{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Login</h1>
+<div class="container">
+    <div class="row" style="padding-bottom:50px;">
+        <div class="page-header"><h3>登录</h3></div>
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+            <br>
+            <p>忘记密码 ? <a href="{{ url_for('auth.password_reset_request') }}">点我重置</a></p>
+            <p>新用户 ? <a href="{{ url_for('auth.register') }}">点我注册</a></p>
+        </div>
+    </div>
 </div>
-<div class="col-md-4">
-    {{ wtf.quick_form(form) }}
-    <br>
-    <p>Forgot your password? <a href="{{ url_for('auth.password_reset_request') }}">Click here to reset it</a></p>
-    <p>New user? <a href="{{ url_for('auth.register') }}">Click here to register</a></p>
-</div>
-
 {% endblock %}
