--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -1,14 +1,20 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}Flasky - Edit Post{% endblock %}
+{% block title %}编辑文章{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <h1>Edit Post</h1>
-</div>
-<div>
-    {{ wtf.quick_form(form) }}
+<div class="container">
+    <div class="row" style="padding:50px 20px;">
+        <div class="col-md-12">
+            <div class="page-header">
+                <h1>编辑文章</h1>
+            </div>
+            <div>
+                {{ wtf.quick_form(form) }}
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock %}
 
