--- a/app/templates/error_page.html
+++ b/app/templates/error_page.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Flasky - {{ code }}: {{ name }}{% endblock %}
+{% block title %}Faiwong'Blog - {{ code }}: {{ name }}{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
