--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,74 +1,77 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
-{% block title %}Flasky - {{ user.username }}{% endblock %}
+{% block title %}{{ user.username }}{% endblock %}
 
 {% block page_content %}
-<div class="page-header">
-    <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
-    <div class="profile-header">
-        <h1>{{ user.username }}</h1>
-        
-        {% if user.name or user.location %}
-        <p>
-            {% if user.name %}{{ user.name }}{% endif %}
-            {% if user.location %}
-                Form <a href="http://maps.google.com/?q={{ user.location }}">
-                    {{ user.location }}</a>
-            {% endif %}
-        </p>
-        {% endif %}
-        
-        {% if current_user.is_administrator() %}
-        <p><a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
-        {% endif %}
-        
-        {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-        
-        <p>
-            Member since {{ moment(user.member_since).format('L') }}.
-            Last seen {{ moment(user.last_seen).fromNow() }}.
-        </p>
-        <p> {{ user.posts.count() }} blog posts. {{ user.comments.
-                count() }} Comments.</p>
-        <p>
-            {% if current_user.can(Permission.FOLLOW) and user != current_user %}
-                {% if not current_user.is_following(user) %}
-                    <a href="{{ url_for('.follow', username=user.username) }}"
-                        class="btn btn-primary">Follow</a>
-                {% else %}
-                    <a href="{{ url_for('.unfollow', username=user.username) }}"
-                        class="btn btn-default">Unfollow</a>
-                {% endif %}
-            {% endif %}
-            <a href="{{ url_for('.followers', username=user.username) }}">
-                Follwers: <span class="badge">{{ user.followers.count() - 1 }}</span>
-            </a>
-            <a href="{{ url_for('.followed_by', username=user.username) }}">
-                Following: <span class="badge">{{ user.followed.count() - 1 }}</span>
-            </a>
-            {% if current_user.is_authenticated and user != current_user and 
-                user.is_following(current_user) %}
-                | <span class="label label-default">Follows you</span>
-            {% endif %}
-        </p>
-        {% if user == current_user %}
-        <a class="btn btn-default" href="{{ url_for('.edit_profile' ) }}">
-            Edit Profile</a>
-        {% endif %}
-        
-        {% if current_user.is_administrator() %}
-        <a class="btn btn-danger"
-                href="{{ url_for('.edit_profile_admin', id=user.id) }}">
-            Edit Profile [Admin]</a>
-        {% endif %}
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="page-header">
+                <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
+                <div class="profile-header">
+                    <h1><i class="fa fa-user-circle-o" aria-hidden="true"></i> {{ user.username }}</h1>
+                    {% if user.name or user.location %}
+                    <p>
+                        {% if user.name %}<i class="fa fa-map-marker" aria-hidden="true"></i> &nbsp{{ user.name }}{% endif %}
+                        {% if user.location %}来自 <a href="http://maps.google.com/?q={{ user.location }}">{{ user.location }}</a>{% endif %}
+                    </p>
+                    {% endif %}
+                    
+                    {% if current_user.is_administrator() %}
+                    <p><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:{{ user.email }}"> {{ user.email }}</a></p>
+                    {% endif %}
+                    
+                    {% if user.about_me %}<p><i class="fa fa-thumb-tack" aria-hidden="true"></i> &nbsp{{ user.about_me }}</p>{% endif %}
+
+                    <p>
+                        <i class="fa fa-calendar-o" aria-hidden="true"></i> 
+                        注册时间：{{ moment(user.member_since).format('L') }}. &nbsp
+                        最后上线：{{ moment(user.last_seen).fromNow() }}.
+                    </p>
+                    <p><i class="fa fa-book" aria-hidden="true"></i> {{ user.posts.count() }} 篇文章. &nbsp {{ user.comments.count() }} 条评论.</p>
+                    <p>
+                        {% if current_user.can(Permission.FOLLOW) and user != current_user %}
+                            {% if not current_user.is_following(user) %}
+                                <a href="{{ url_for('.follow', username=user.username) }}"
+                                    class="btn btn-primary">关注</a>
+                            {% else %}
+                                <a href="{{ url_for('.unfollow', username=user.username) }}"
+                                    class="btn btn-default">取消关注</a>
+                            {% endif %}
+                        {% endif %}
+                        <a href="{{ url_for('.followers', username=user.username) }}">
+                            关注者: <span class="badge">{{ user.followers.count() - 1 }}</span>
+                        </a>
+                        <a href="{{ url_for('.followed_by', username=user.username) }}">
+                            关注了: <span class="badge">{{ user.followed.count() - 1 }}</span>
+                        </a>
+                        {% if current_user.is_authenticated and user != current_user and 
+                            user.is_following(current_user) %}
+                            | <span class="label label-default">Ta 已关注你</span>
+                        {% endif %}
+                    </p>
+                    {% if user == current_user %}
+                    <a class="btn btn-default" href="{{ url_for('.edit_profile' ) }}">
+                        编辑资料</a>
+                    {% endif %}
+                    
+                    {% if current_user.is_administrator() %}
+                    <a class="btn btn-danger" href="{{ url_for('.edit_profile_admin', id=user.id) }}">编辑资料 [管理员]</a>
+                    {% endif %}
+                </div>
+            </div>
+
+        </div>
     </div>
 </div>
-
-<h3>Posts by {{ user.username }}</h3>
-{% include '_posts.html' %}
-{% if pagination %}
-<div class="pagination">
-    {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+<div class="container">
+    <h3><i class="fa fa-book" aria-hidden="true"></i> {{ user.username }} 的文章</h3>
+    {% include '_posts.html' %}
+    {% if pagination %}
+    <div style="float:right">
+        {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
+    </div>
+    {% endif %}
 </div>
-{% endif %}
+
 {% endblock %}
