--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,8 @@
     <link rel="icon" href="{{ url_for('static', filename = 'myicon.ico') }}" type="imge/x-icon">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='mystyle.css') }}">
-    <link href="http://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <link href="http://cdn.bootcss.com/flat-ui/2.3.0/css/flat-ui.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://cdn.bootcss.com/flat-ui/2.3.0/css/flat-ui.min.css" rel="stylesheet">
     <style type="text/css">
         h1{
             font-size:50px;
@@ -118,6 +118,6 @@
 {% block scripts %}
     {{ super() }}
     {{ moment.include_moment() }}
-    <script src="http://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
     <script type="text/javascript" src="{{ url_for('static', filename='mystyle.js') }}"></script>
 {% endblock %}
