--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -25,7 +25,7 @@
                 <div class="post-author">
                     
                 </div>
-                <div class="post-alert">本博客采用创作共用版权协议, 要求署名、非商业用途和保持一致. 转载本博客文章必须也遵循署名-非商业用途-保持一致的创作共用协议</div>
+                <div class="post-alert">版权声明：本文版权归作者所有，转载请注明地址。</div>
                 
                 <div class="post-body">
                 {% if post.body_html %}
