--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 {% block html_attribs %} lang="zh-CN"{% endblock html_attribs %}
-{% block title %}Faiwong'Blog{% endblock %}
+{% block title %}Faiwong's Blog{% endblock %}
 
 {% block head %}
     {{ super() }}
@@ -93,7 +93,7 @@
                 <div class="row" style="padding-top:30px;">
                     <div class="col-md-7">
                         <h5 style="margin-bottom:15px;margin-left:18px;"><strong>ABOUT</strong></h5>
-                        <p style="padding:10px 150px 10px 20px"><strong>Faiwong ' Blog </strong>  &nbsp本博客属个人所有，不涉及商业目的。基于flask和bootstrap编写，用于记录互联网学习，个人感想的博客网站。网站部署在云平台heroku上。</p>
+                        <p style="padding:10px 150px 10px 20px"><strong>Faiwong 's Blog </strong>  &nbsp本博客属个人所有，不涉及商业目的。基于flask和bootstrap编写，用于记录互联网学习，个人感想的博客网站。网站部署在云平台heroku上。</p>
                         
                     </div>
                     <div class="col-md-5">
