--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
 {% block page_bottom %}
     <div class="jumbotron" style="padding-bottom:100px;background:#426579;">
         <div class="container">
-            <h2 style="color:#E7DBDB">Faiwong ' Blog</h2>
+            <h2 style="color:#E7DBDB">Faiwong's Blog</h2>
             <p class="lead" style="color:#E7DBDB">Keep on going never give up. </p>
             <a href="about"><button class="btn btn-danger btn-wide the-font">关于我</button></a>
         </div>
