--- a/app/templates/about_me.html
+++ b/app/templates/about_me.html
@@ -35,10 +35,10 @@
                             <hr>
                             <ul>
                                 <li>python(编程知识，flask框架，爬虫等）</li>
-                                <li>html、css、javascrip等前端基础</li>
+                                <li>html、css、javascript等前端基础</li>
                                 <li>使用bootstrap、jquery</li>
                                 <li>使用git，notepad++，pycharm等工具</li>
-                                <li>了解linux基础、vim命令、sql、http等知识</li>
+                                <li>了解linux基础、vim命令、mysql、http等知识</li>
                             </ul>
                             <h3><i class="fa fa-rocket" aria-hidden="true"></i> 发展方向：</h3>
                             <hr>
